[MRG] Fix popup position shift due to scrollbar with overflow: hidden (#49)
Updated lock-scroll logic to use 

body.lock-scroll {
    position: fixed;
    width: 100%;
}

 instead of

body.lock-scroll,
html.lock-scroll {
    overflow: hidden !important;
}

Also, reorganized the javascript for the popup card section to make it more modular and to include more descriptive comments

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 */
 
 html {
-    scrollbar-gutter: stable overlay;
+    scrollbar-gutter: stable overlay !important;
     overflow-y: scroll;
     min-width: var(--content-min-width);
 }
@@ -648,10 +648,9 @@ body.lock-scroll #content {
     visibility: hidden;
 }
 
-body.lock-scroll,
-html.lock-scroll {
-    overflow: hidden !important;
-    /* height: 100% !important; */
+body.lock-scroll {
+    position: fixed;
+    width: 100%;
 }
 
 /* 
